<resources>
    <string name="app_name" translatable="false">TERMINAL</string>
    <string name="logo_terminal" translatable="false">logo_terminal</string>

    <string name="home_menu_item_title">Home</string>
    <string name="future_trips_menu_item_title" translatable="false">@string/future_trips_title</string>
    <string name="itineraries_menu_item_title" translatable="false">@string/itineraries_title</string>
    <string name="disconnect_menu_item_title">Logout</string>

    <string name="sign_up_title">Registration</string>
    <string name="sign_in_title">Connection</string>

    <string name="hint_email_identification">Email</string>
    <string name="hint_pwd_identification">Password</string>
    <string name="hint_pwd_confirm_sign_up">Confirm your password</string>



    <string name="sign_in_submit">Log in</string>
    <string name="sign_up_submit">Sign up</string>

    <string name="toggle_identification_from_signup">Already have an account?</string>
    <string name="toggle_identification_from_signin">Don\'t have an account?</string>

    <string name="stay_connected_identification">Stay connected?</string>

    <string name="error_recuperation_data_on_server">Difficulties encountered in retrieving data from the server</string>
    <string name="error_access_server">Difficulties encountered when accessing the server</string>

    <string name="home_see_itineraris">See all itineraries served</string>

    <string name="future_trips_title">Upcoming trips</string>
    <string name="future_trips_no_result">No upcoming trips</string>

    <string name="title_marker_position_home">Your position</string>
    <string name="descr_marker_position_home">You are here</string>

    <string name="itineraries_title">Itineraries</string>
    <string name="itineraries_no_result">No itineraries served</string>

    <string name="toggle_expand">Expand</string>

    <string name="table_itinerary_stops_title">Stops</string>
    <string name="table_itinerary_workdays_title">From Monday-Friday</string>
    <string name="table_itinerary_weekend_title">Weekend</string>
    <string name="no_trips_for_itinerary">No trips planned for this itinerary</string>

    <string name="to_my_position_descr_reservation">Pick me up at my current location</string>
    <string name="choose_date_descr_reservation">Choose the date of your reservation</string>
    <string name="share_trip_descr_reservation">Do not share the route with other users</string>
    <string name="nb_place_descr_reservation">Place to reserve</string>
    <string name="start_stop_descr_reservation">Start stop</string>
    <string name="hour_trip_descr_reservation">Start time</string>
    <string name="end_stop_descr_reservation">Finish stop</string>
    <string name="submit_reservation">Validate the reservation</string>
    <string name="from_here_position_reservation">You will start from here</string>
    <string name="to_here_position_reservation">You will arrive here</string>

    <string name="your_position">your position</string>

    <string name="transparent_img_for_map_reservation" translatable="false">transparent_img</string>

    <string name="too_far_from_reservation">You are too far from this route to book from your location</string>

    <string name="title_msg_passenger_trip">Your reserved trip</string>

    <string name="now">now</string>

    <string name="cancel">Cancel reservation</string>

    <string name="no_passengers">No passengers to pick up outside the stops</string>


    <string name="hour_singular">hour</string>
    <string name="hour_plural">hours</string>
    <string name="min_singular">minute</string>
    <string name="min_plural">minutes</string>
    <string name="your_trip_of">Your trip on</string>
    <string name="will_last">will last</string>
    <string name="from">from</string>
    <string name="at">at</string>
    <string name="up_to">to</string>

    <string name="hour_format">H\':\'m</string>
    <string name="time_format">H\'h\'m\'min\'</string>
    <string name="time_format_hour">H\'h\'</string>
    <string name="time_format_min">m\'min\'</string>

    <string name="about">About</string>
    <string name="from_you">from you</string>
    <string name="to_your_position">To your position</string>

    <string name="place_singular">place</string>
    <string name="place_plural">places</string>

    <string name="shared_trip">Other people will be able to participate in the same trip</string>
    <string name="not_shared_trip">You will not share your trip with other people</string>

    <string name="you_are_at">You are</string>
    <string name="meter_of_the_itinerary">m from the itinerary</string>


    <string name="error_no_internet_connection">No internet connection impossible to access the server</string>

</resources>