<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent" android:elevation="10dp"
>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_background"
            android:orientation="vertical" android:id="@+id/constraintLayout">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="0dp" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHeight_percent="0.8"
                app:layout_constraintWidth_percent="0.95" android:clipChildren="false"
                app:layout_constraintHeight_max="wrap" android:maxWidth="500dp" app:layout_constraintWidth_max="wrap">

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:gravity="center"
                    app:layout_constraintVertical_bias="0.5"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0.5" android:maxWidth="500dp">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/title_identification"
                        android:textAllCaps="false"
                        android:textAlignment="center" android:textColor="#FFFFFF" android:textSize="36sp"
                        android:fontFamily="sans-serif-light" android:layout_marginBottom="30dp"/>


                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/input_email_identification"
                        android:textAllCaps="false"
                        android:textColor="#000000" android:textSize="18sp"
                        android:fontFamily="sans-serif" android:hint="@string/hint_email_identification"
                        android:textColorHint="?android:attr/textColorHint"
                        android:layout_marginBottom="20dp" android:background="@drawable/input_field_identification"
                        android:padding="10dp" android:textAlignment="center"
                        android:paddingLeft="10dp" android:paddingRight="10dp" android:inputType="text"
                        android:maxLines="1"
                        android:elevation="10dp" android:layout_marginLeft="10dp" android:layout_marginRight="10dp"
                />
                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/input_pwd_identification"
                        android:textAllCaps="false"
                        android:textColor="#000000" android:textSize="18sp"
                        android:fontFamily="sans-serif" android:hint="@string/hint_pwd_identification"
                        android:textColorHint="?android:attr/textColorHint"
                        android:layout_marginBottom="20dp" android:background="@drawable/input_field_identification"
                        android:padding="10dp" android:textAlignment="center"
                        android:paddingLeft="10dp" android:paddingRight="10dp"
                        android:maxLines="1" android:inputType="textPassword" android:layout_marginRight="10dp"
                        android:layout_marginLeft="10dp" android:elevation="10dp"/>
                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/input_pwd_confirm_identification"
                        android:textAllCaps="false"
                        android:textColor="#000000" android:textSize="18sp"
                        android:fontFamily="sans-serif" android:hint="@string/hint_pwd_confirm_sign_up"
                        android:textColorHint="?android:attr/textColorHint"
                        android:layout_marginBottom="20dp" android:background="@drawable/input_field_identification"
                        android:padding="10dp" android:textAlignment="center"
                        android:paddingLeft="10dp" android:paddingRight="10dp"
                        android:maxLines="1" android:inputType="textPassword" android:layout_marginRight="10dp"
                        android:layout_marginLeft="10dp" android:elevation="10dp"/>
                <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <Button
                            android:layout_width="0dp"
                            android:layout_height="wrap_content" android:id="@+id/submit_identification"
                            style="@style/Widget.AppCompat.Button.Colored"
                            android:textColor="#FFFFFF"
                            android:paddingRight="10dp" android:paddingLeft="10dp"
                            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintWidth_percent="0.8" app:layout_constraintHeight_percent="0"
                            android:maxWidth="5dp"
                            android:layout_marginBottom="5dp" app:layout_constraintVertical_bias="1.0"
                            android:background="@drawable/button_submit_identification" android:elevation="10dp"
                            app:layout_constraintHorizontal_bias="0.493" android:layout_marginRight="10dp"
                            android:layout_marginLeft="10dp"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
                <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp" android:layout_marginBottom="10dp">

                    <CheckBox
                            android:text="@string/stay_connected_identification"
                            android:layout_width="match_parent"
                            android:layout_height="32dp" android:id="@+id/checkbox_stay_connected_identification"
                            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                            android:textColor="@color/lightOrange"
                            android:buttonTint="@color/lightOrange" android:checked="true"
                            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="1.0"
                            android:textSize="16sp"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
                <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/toggle_identification"
                        app:layout_constraintWidth_percent="0.8" app:layout_constraintHeight_percent="0"
                        android:textColor="@color/button_change_identification"
                        android:backgroundTint="@color/transparent" android:background="@null"
                        android:textAllCaps="false" android:fontFamily="sans-serif" android:minHeight="0dp"/>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="50dp" app:srcCompat="@drawable/ic_launcher"
                android:id="@+id/imageView"
                android:padding="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="30dp"
                android:layout_marginStart="5dp"
                android:contentDescription="@string/logo_terminal" android:adjustViewBounds="true"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>