<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".operational.HomeActivity"
        android:fitsSystemWindows="true">

    <androidx.fragment.app.FragmentContainerView
            android:id="@+id/map_home"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="0dp"
            android:layout_height="0dp"
            tools:context=".operational.HomeActivity"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:elevation="0dp" app:layout_constraintBottom_toBottomOf="parent"/>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" style="@style/BackgroundWhiteElement"
            android:padding="3dp" android:id="@+id/const_layout_future_trips_home"
            app:layout_constraintBottom_toTopOf="@+id/const_layout_see_itineraries_home"
            android:layout_marginBottom="4dp"
            android:elevation="2dp" android:layout_marginStart="4dp" android:layout_marginEnd="4dp">
        <Button
                android:text="@string/future_trips_title"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/future_trips_button"
                android:textSize="16sp"
                android:textColor="#FFFFFF"
                android:textAllCaps="false"
                android:paddingStart="25dp"
                android:paddingEnd="25dp" android:paddingTop="12dp" android:paddingBottom="12dp"
                android:background="@drawable/button_violet_blue"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:visibility="visible" android:clickable="true" android:focusable="true"
                android:focusableInTouchMode="false"/>
        <TextView
                android:text="@string/future_trips_no_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/no_future_trip_home"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_margin="15dp"
                android:visibility="gone" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/future_trips_button"/>
        <ScrollView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintHeight_max="280dp"
                android:id="@+id/scrollview_reservation" app:layout_constraintHeight_min="0dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
                android:visibility="visible"
                android:verticalScrollbarPosition="defaultPosition">
            <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                               android:layout_height="wrap_content">
                <androidx.recyclerview.widget.RecyclerView
                        android:clipToPadding="false"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent" android:id="@+id/future_trips_recycler_home"
                        android:paddingTop="56dp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:elevation="6dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.372"
            android:id="@+id/const_layout_see_itineraries_home">

        <Button
                android:text="@string/home_see_itineraris"
                android:layout_width="0dp"
                android:layout_height="50dp" android:id="@+id/btn_see_itineraries"
                style="@style/SubmitButtonOrangeTheme" android:padding="10dp" android:layout_margin="3dp"
                android:textAllCaps="false" android:textSize="16sp" android:elevation="10dp"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>